Upgraded sqlite_queue to Python 3.

--- a/config/config_example.yaml
+++ b/config/config_example.yaml
@@ -1,8 +1,5 @@
-meter_files: /home/cea/meters/*.csv
-delete_after_process: True
-meter_number_db: /home/cea/meter_db/meters.sqlite
+sensor_to_bmon_file: /home/cea/meter_db/meters.sqlite
 logging_level: INFO
-time_zone: US/Alaska
 bmon_servers:
   ahfc:
     url: https://bms.ahfc.us/readingdb/reading/store/
