Completed sample config file. Progress on processing routine.

--- a/config/config_example.yaml
+++ b/config/config_example.yaml
@@ -1,5 +1,18 @@
 sensor_to_bmon_file: /home/cea/meter_db/meters.sqlite
 logging_level: INFO
+file_sources:
+  - pattern: /home/alan/chugach/*.csv
+    reader: chugach.Reader
+    reader_params:
+      chunk_size: 50
+    default_bmon: ahfc
+    timezone: US/Alaska
+    file_retention: 3
+  - pattern: /home/alan/mea/*.xlsx
+    reader: mea.Reader
+    default_bmon: mssd
+    timezone: US/Alaska
+    file_retention: 5
 bmon_servers:
   ahfc:
     url: https://bms.ahfc.us/readingdb/reading/store/
