--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-PyYAML>=3.13
-pytz>=2018.5
-requests>=2.19.1
-xlsx2csv>=0.7.6
-gspread>=3.1.0
-oauth2client>=4.1.3
+urllib3==1.25.11
+pytz==2020.1
+requests==2.24.0
+gspread==3.7.0
+oauth2client==4.1.3
+PyYAML==5.4.1
+xlsx2csv==0.7.7
